MGS-2440 BUGFIX search box disappears on iOS safari

--- a/src/scss/trumps/_trump.search-box.govscot.scss
+++ b/src/scss/trumps/_trump.search-box.govscot.scss
@@ -38,12 +38,6 @@ $search-box__transition-timing: ease;
   }
 }
 
-.site-header-container--fixed {
-  .search-box--mobile {
-    position: fixed;
-  }
-}
-
 @include media-query(medium) {
   .search-box {
 
